# crm

./: .gitignore  .tokeignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  _typos.toml  cliff.toml
.github/workflows/: build.yml
assets/excalidraw/: crm.excalidraw
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm-send/tests/: service.rs
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: auth.rs  mod.rs
fixtures/: cert.pem  key.pem  nginx.conf  rootCA.pem  token
protos/crm/: crm.proto  messages.proto  rpc.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto  rpc.proto
user-stat/: .env  Cargo.toml  build.rs
user-stat/examples/: fake.rs  gen.rs
user-stat/fixtures/: data.sql
user-stat/migrations/: 20240706163534_init.sql
user-stat/src/: config.rs  lib.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
